tests/ui/annotate-snippet/multispan.stderr
error: hello to you, too!
  --> $DIR/multispan.rs:15:5
   |
LL |     hello!(hi);
   |     ^^^^^^^^^^
   |
error: hello to you, too!
  --> $DIR/multispan.rs:18:5
   |
LL |     hello!(hi hi);
   |     ^^^^^^^^^^^^^
   |
error: hello to you, too!
  --> $DIR/multispan.rs:21:5
   |
LL |     hello!(hi hi hi);
   |     ^^^^^^^^^^^^^^^^
   |
error: hello to you, too!
  --> $DIR/multispan.rs:24:5
   |
LL |     hello!(hi hey hi yo hi beep beep hi hi);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
error: hello to you, too!
  --> $DIR/multispan.rs:25:5
   |
LL |     hello!(hi there, hi how are you? hi... hi.);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
error: hello to you, too!
  --> $DIR/multispan.rs:26:5
   |
LL |     hello!(whoah. hi di hi di ho);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
error: hello to you, too!
  --> $DIR/multispan.rs:27:5
   |
LL |     hello!(hi good hi and good bye);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
